--- a/_rmd/2017-01-20-Analyzing-double-seasonal-time-series-with-GAM-in-R.Rmd
+++ b/_rmd/2017-01-20-Analyzing-double-seasonal-time-series-with-GAM-in-R.Rmd
@@ -33,6 +33,7 @@ where \\( i = 1, \dots, N \\), \\( g \\) is a link function (identical, logarith
 The smooth function \\( f \\) is composed by sum of basis functions \\( b \\) and their corresponding regression coefficients \\( \beta \\), formally written:
 
 $$f(x) = \sum_{i = 1}^q b_i(x)\beta_i,$$
+
 $$\mbox{ where } q \mbox{ is basis dimension.}$$
 
 Smooth functions are also called [splines](https://en.wikipedia.org/wiki/Spline_(mathematics)). [Smoothing splines](https://en.wikipedia.org/wiki/Smoothing_spline) are real functions that are piecewise-defined by polynomial functions (basis functions). The places, where the polynomial pieces connect are called knots. In **GAMs**, penalized regression splines are used in order to regularize the smoothness of a spline.
@@ -90,7 +91,7 @@ where \\( \mathbf{A} \\) is the [projection matrix](https://en.wikipedia.org/wik
 
 #### Interactions
 
-We are almost at the end of the explanation of **GAMs** theory. One more thing. As I showed in the previous blog post, **interactions** are a very important part of the **regression** model for **double seasonal time series**. With **GAMs** there are four (!) main possibilities, how to include them to the model. First is the most basic, like in **MLR**, the multiplication of two independent variables: \\( x_1\times x_2 \\). Second one is possibility to use smoothed function to one variable: \\( f_1(x_1)\times x_2 \\). Third one comes to use same smoothed function for both variables: \\(f_1(x_1)\times f_1(x_2) (\mbox{often denoted} f(x_1, x_2)) \\). Fourth one is the most complex, with GAM it is possible to use [tensor product](https://en.wikipedia.org/wiki/Tensor_product) interactions. So it is possible to use different smoothing bases for variables and penalize it in two (when we do interactions of two independent variables) different ways: \\( f_1(x_1)\otimes f_2(x_2)  \\). More nicely, tensor product interactions can be written as:
+We are almost at the end of the explanation of **GAMs** theory. One more thing. As I showed in the previous blog post, **interactions** are a very important part of the **regression** model for **double seasonal time series**. With **GAMs** there are four (!) main possibilities, how to include them to the model. First is the most basic, like in **MLR**, the multiplication of two independent variables: \\( x_1\times x_2 \\). Second one is possibility to use smoothed function to one variable: \\( f_1(x_1)\times x_2 \\). Third one comes to use same smoothed function for both variables: \\( f_1(x_1)\times f_1(x_2) (\mbox{often denoted } f(x_1, x_2)) \\). Fourth one is the most complex, with GAM it is possible to use [tensor product](https://en.wikipedia.org/wiki/Tensor_product) interactions. So it is possible to use different smoothing bases for variables and penalize it in two (when we do interactions of two independent variables) different ways: \\( f_1(x_1)\otimes f_2(x_2)  \\). More nicely, tensor product interactions can be written as:
 
 $$f_{12}(x_1, x_2) = \sum_{i=1}^I \sum_{j=1}^J \delta_{ij}b_{1i}(x_1)b_{2j}(x_2),$$
 
@@ -472,7 +473,7 @@ pacf(resid(gam_6_ar1$lme, type = "normalized"), lag.max = 48, main = "pACF of ga
 
 We can see a significant difference between these two plots and corresponding values of pACF. Optimal values of pACF should be under dashed blue lines, which isn't completely this scenario on the right plot (model with the AR(1)). It can be better...
 
-I will do little hack now. For optimal choose of AR(p) and MA(q) orders `auto.arima` function, from the library `forecast`, will be used on residuals from the model `gam_6_ar0`. It automatically chooses optimal orders of ARMA (in our case) based on AIC criterion. As we can use just ARMA models in `gamm`, so unstationarity isn't allowed, set an argument `stationarity = TRUE`.
+I will do little hack now. For optimal choose of AR(p) and MA(q) orders `auto.arima` function, from the library `forecast`, will be used on residuals from the model `gam_6_ar0`. It automatically chooses optimal orders of ARMA (in our case) based on AIC criterion. As we can use just ARMA models in `gamm`, so nonstationarity isn't allowed, set an argument `stationarity = TRUE`.
 ```{r, message=FALSE, warning=FALSE}
 library(forecast)
 arma_res <- auto.arima(resid(gam_6_ar0$lme, type = "normalized"),
@@ -495,9 +496,9 @@ gam_6_arma<- gamm(Load ~ t2(Daily, Weekly,
 anova(gam_6_ar0$lme, gam_6_ar1$lme, gam_6_arma$lme)
 ```
 
-The new model `gam_6_arma` is slightly better in the meaning of AIC. P-value is again very small, which means that `gam_6_arma` is significantly better then `gam_6_ar1`.
+The new model `gam_6_arma` is slightly better in the meaning of AIC. P-value is again very small, which means that `gam_6_arma` is significantly better than `gam_6_ar1`.
 
-Now do comparison of these two models on theirs pACF values.
+Now do a comparison of these two models on theirs pACF values.
 ```{r, fig.height=4, fig.width=9}
 layout(matrix(1:2, ncol = 2))
 pacf(resid(gam_6_ar1$lme, type = "normalized"), lag.max = 48, main = "pACF of gam n.6 with AR(1)")
@@ -506,7 +507,7 @@ pacf(resid(gam_6_arma$lme, type = "normalized"), lag.max = 48, main = "pACF of g
 
 It's better now. Can we be happy? Up to now, everything seems fine.
 
-Let's make one more visualization of residuals of two models to confirm our little uncertainty about correctness of model with ARMA(1,2). Compare it with baseline model `gam_6_ar0`.
+Let's make one more visualization of residuals of two models to confirm our little uncertainty about the correctness of model with ARMA(1,2). Compare it with baseline model `gam_6_ar0`.
 ```{r, fig.height=6, fig.width=8}
 datas <- data.table(Fitted_values = c(gam_6_ar0$gam$fitted.values,
                                       gam_6_arma$gam$fitted.values),
@@ -550,13 +551,13 @@ We can see the behavior of **GAMs** on two times series from two different types
 
 Another animation, which I created, is a 3D visualization of fitted values like a surface. As I showed you before, it can be done very easily by function `vis.gam`.
 
-![](/images/industry_1_vis_3D_v2.gif)
+![](/images/industry_1_3D_v2.gif)
 
 We can compare it with the first dashboard because again it's time series from commercial properties. EDF is also printed to the title of GIF for reasons to see how it changes depending on the behavior of electricity consumption.
 
 With this, I would like to end the main part of this tutorial and conclude it with some remarks.
 
-In the beginning of the post, motivation and the theory behind GAM method was introduced. Next, the analytical (**magical**) part continued with explaining various features of the package `mgcv`. Different types of **interactions** were showed and analyzed. Next, consideration about the correctness of an autoregressive model for errors was discussed. In the end, I tried to make a big view of a behavior of **GAMs** by animations of its performance on **double seasonal time series**.
+In the beginning of the post, motivation and the theory behind GAM method was introduced. Next, the analytical ("magical") part continued with explaining various features of the package `mgcv`. Different types of **interactions** were showed and analyzed - best chose was tensor product interactions (`t2`). Next, consideration about the correctness of an autoregressive model (or ARMA) for errors was discussed - ended with an open question. In the end, I tried to make a big view of a behavior of **GAMs** by animations of its performance on **double seasonal time series**.
 
 Everything that was said implies these advantages and disadvantages of using **GAM** for your problem:
 
