--- a/_rmd/2017-01-24-Analyzing-double-seasonal-time-series-with-GAM-in-R.Rmd
+++ b/_rmd/2017-01-24-Analyzing-double-seasonal-time-series-with-GAM-in-R.Rmd
@@ -3,7 +3,7 @@ layout: post
 title: Doing magic and analyzing seasonal time series with GAM (Generalized Additive Model) in R
 author: Peter Laurinec
 published: false
-status: process
+status: processed
 tags: R forecast GAM
 draft: false
 ---
